syntax = "proto3";
import "google/protobuf/empty.proto";

service PuppetMasterClientService {
    rpc Status (google.protobuf.Empty) returns (google.protobuf.Empty);
}
